--- a/health-tracker-frontend/src/components/ImcAcompanhamento/ImcAcompanhamento.css
+++ b/health-tracker-frontend/src/components/ImcAcompanhamento/ImcAcompanhamento.css
@@ -58,7 +58,6 @@
   
   button {
     grid-column: 1 / -1; /* Botão ocupa a linha completa */
-    padding: 12px 50px; /* Ajusta o tamanho do botão */
     font-size: 1.1rem;
     background-color: #FF8C00;
     color: white;
@@ -76,6 +75,26 @@
     background-color: #b86a0b; /* Verde mais escuro */
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); /* Sombra ao passar o mouse */
   }
+
+  .button-submit-form {
+    grid-column: 1 / -1; /* Botão ocupa a linha completa */
+    font-size: 1.1rem;
+    background-color: #FF8C00;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    text-transform: uppercase; /* Texto em maiúsculo */
+    font-weight: bold;
+    width: fit-content; /* Ajusta a largura ao conteúdo */
+    margin: 0 auto; /* Centraliza horizontalmente */
+  }
+  
+  .button-submit-form:hover {
+    background-color: #b86a0b; /* Verde mais escuro */
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); /* Sombra ao passar o mouse */
+  }
   
   @media (max-width: 768px) {
     form {
@@ -86,7 +105,7 @@
       grid-column: span 1; /* Mantém largura no mobile */
     }
   
-    button {
+    .button-submit-form {
       width: fit-content; /* Mantém largura ajustada ao conteúdo no mobile */
       padding: 10px 25px; /* Ajusta o padding para telas menores */
       font-size: 1rem;
@@ -137,7 +156,6 @@
   .checkin-container {/* Garante que cada componente ocupe a mesma proporção */
     display: flex;
     flex-direction: column;
-    overflow-y: auto; /* Permite rolagem caso o conteúdo ultrapasse o espaço */
   }
   
   .calendar-container {
