Ajusta tamanho do botao

--- a/health-tracker-frontend/src/components/ImcAcompanhamento/ImcAcompanhamento.css
+++ b/health-tracker-frontend/src/components/ImcAcompanhamento/ImcAcompanhamento.css
@@ -79,6 +79,7 @@
   .button-submit-form {
     grid-column: 1 / -1; /* Botão ocupa a linha completa */
     font-size: 1.1rem;
+    padding: 12px 30px;
     background-color: #FF8C00;
     color: white;
     border: none;
