Ajusta corretamente o botao de logout

--- a/health-tracker-frontend/src/components/Sidebar/Sidebar.css
+++ b/health-tracker-frontend/src/components/Sidebar/Sidebar.css
@@ -95,6 +95,8 @@
   justify-content: center;
   font-size: 12px;
   font-weight: bold;
+  margin-bottom: 20px;
+  padding-top: 0.8rem;
 }
 
 .logout-botao:hover {
